HelloUltraviolet/Fixtures/RejectedSource/Keys/KeyPathsDiagnostic/Expected.uv
//! Expected diagnostic metadata for the KeyPathsDiagnostic rejected-source specimen.

expectedDiagnostic("E-CON-0033", "diagnostics.19.KeyPaths")
